--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,5 @@
 <html lang="en">
   <head>
-    <script src="../components/navbar/nav.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Tweet Better</title>
@@ -10,5 +9,10 @@
       <img class="home-icon" src="../assets/baseline-menu-24px.svg" />
       <p>Home</p>
     </div>
+    <div class="drawer">
+      <span class="navlist">Home</span> <span class="navlist">Login</span>
+      <span class="navlist">Pricing</span> <span class="navlist">About</span>
+    </div>
   </body>
+  <script src="../components/navbar/nav.js"></script>
 </html>
