UI Nav Made nicer

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,10 +9,17 @@
       <img class="home-icon" src="../assets/baseline-menu-24px.svg" />
       <p>Home</p>
     </div>
-    <div class="drawer">
-      <span class="navlist">Home</span> <span class="navlist">Login</span>
-      <span class="navlist">Pricing</span> <span class="navlist">About</span>
+    <div class="lighten">
+      <div class="drawer">
+        <span class="navlist">Home</span> <span class="navlist">Login</span>
+        <span class="navlist">Pricing</span> <span class="navlist">About</span>
+      </div>
     </div>
+    <section class="main">
+      <section class="header-banner">
+        <img src="../assets/Tweet Better.png" />
+      </section>
+    </section>
   </body>
   <script src="../components/navbar/nav.js"></script>
 </html>
