--- a/pages/index.html
+++ b/pages/index.html
@@ -16,10 +16,38 @@
       </div>
     </div>
     <section class="main">
-      <section class="header-banner">
-        <img src="../assets/Tweet Better.png" />
+      <img class="header-banner" src="../assets/Tweet Better.png" />
+      <section class="review-caro">
+        <div class="card">
+          <div class="card-header">reviwer 1</div>
+          <p class="card-content">Not to shabby</p>
+        </div>
+
+        <div class="card">
+          <div class="card-header">reviwer 2</div>
+          <p class="card-content">it's pretty niceee</p>
+        </div>
+
+        <div class="card">
+          <div class="card-header">reviwer 3</div>
+          <p class="card-content">it was shit</p>
+        </div>
+
+        <div class="card">
+          <div class="card-header">reviwer 4</div>
+          <p class="card-content">didnt work</p>
+        </div>
+      </section>
+      <section class="about">
+        <div class="m-card">
+          <div class="m-card-header">ABOUT OUR PRODUCT</div>
+          <p class="m-card-content">boop</p>
+        </div>
       </section>
     </section>
+    <div class="footer"><span>footer</span></div>
   </body>
   <script src="../components/navbar/nav.js"></script>
+  <script src="../components/card/card.js"></script>
+  <script src="../components/mega-card/mega-card.js"></script>
 </html>
