--- a/pages/index.html
+++ b/pages/index.html
@@ -45,7 +45,7 @@
         </div>
       </section>
     </section>
-    <div class="footer"><span>footer</span></div>
+    <div class="footer"><span>©2019 Tweet Better</span></div>
   </body>
   <script src="../components/navbar/nav.js"></script>
   <script src="../components/card/card.js"></script>
