making review caro

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,27 +17,30 @@
     </div>
     <section class="main">
       <img class="header-banner" src="../assets/Tweet Better.png" />
-      <section class="review-caro">
-        <div class="card">
-          <div class="card-header">reviwer 1</div>
-          <p class="card-content">Not to shabby</p>
+      <div class="carousel-wrapper">
+        <div class="carousel">
+          <div class="left-button"><p><</p></div>
+          <div class="card" data-target="card">
+            <div class="card-header">reviwer 1</div>
+            <p class="card-content">Not to shabby</p>
+          </div>
+          <div class="card" data-target="card">
+            <div class="card-header">reviwer 2</div>
+            <p class="card-content">it's pretty niceee</p>
+          </div>
+          <div class="card" data-target="card">
+            <div class="card-header">reviwer 3</div>
+            <p class="card-content">it was shit</p>
+          </div>
+          <div class="card" data-target="card">
+            <div class="card-header">reviwer 4</div>
+            <p class="card-content">didnt work</p>
+          </div>
+          }
+          <div class="right-button"><p>></p></div>
         </div>
+      </div>
 
-        <div class="card">
-          <div class="card-header">reviwer 2</div>
-          <p class="card-content">it's pretty niceee</p>
-        </div>
-
-        <div class="card">
-          <div class="card-header">reviwer 3</div>
-          <p class="card-content">it was shit</p>
-        </div>
-
-        <div class="card">
-          <div class="card-header">reviwer 4</div>
-          <p class="card-content">didnt work</p>
-        </div>
-      </section>
       <section class="about">
         <div class="m-card">
           <div class="m-card-header">ABOUT OUR PRODUCT</div>
@@ -50,4 +53,6 @@
   <script src="../components/navbar/nav.js"></script>
   <script src="../components/card/card.js"></script>
   <script src="../components/mega-card/mega-card.js"></script>
+  <script src="../components/slide/slide.js"></script>
 </html>
+<!-- { -->
