file structure change

--- a/pages/index.html
+++ b/pages/index.html
@@ -47,9 +47,9 @@
     </section>
     <div class="footer"><span>©2019 Tweet Better</span></div>
   </body>
-  <script src="./components/navbar/nav.js"></script>
-  <script src="./components/card/card.js"></script>
-  <script src="./components/mega-card/mega-card.js"></script>
-  <script src="./components/slide/slide.js"></script>
+  <script src="../components/navbar/nav.js"></script>
+  <script src="../components/card/card.js"></script>
+  <script src="../components/mega-card/mega-card.js"></script>
+  <script src="../components/slide/slide.js"></script>
 </html>
 <!-- { -->
