file structure change

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Tweet Better</title>
   </head>
   <body>
     <div class="nav-base">
-      <img class="home-icon" src="../assets/baseline-menu-24px.svg" />
+      <img class="home-icon" src="./assets/baseline-menu-24px.svg" />
       <p>Home</p>
     </div>
     <div class="lighten">
@@ -16,7 +16,7 @@
       </div>
     </div>
     <section class="main">
-      <img class="header-banner" src="../assets/Tweet Better.png" />
+      <img class="header-banner" src="./assets/Tweet Better.png" />
       <div class="carousel-wrapper">
         <div class="carousel">
           <div class="card" data-target="card">
