Made Start of About Page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <div class="nav-base">
       <img class="home-icon" src="./assets/baseline-menu-24px.svg" />
       <p>Home</p>
+      <a class="button" href="https://focused-wiles-26a714.netlify.com/"
+        >Join for free today!</a
+      >
     </div>
     <div class="lighten">
       <div class="drawer">
-        <span class="navlist">Home</span> <span class="navlist">Login</span>
-        <span class="navlist">Pricing</span> <span class="navlist">About</span>
+        <a class="navlist">Home</a> <a class="navlist">Pricing</a>
+        <a class="navlist" href="./pages/about.html">About Us</a>
       </div>
     </div>
     <section class="main">
@@ -41,7 +44,24 @@
       <section class="about">
         <div class="m-card">
           <div class="m-card-header">ABOUT OUR PRODUCT</div>
-          <p class="m-card-content">boop</p>
+          <p class="m-card-content">
+            we are dedicated to catching swearing and bad faith texts but that
+            feels limiting. we strive to be used in a way that can be used by
+            professionals and the average tweeter.<br />
+            we went out to build something professionals could use in stressful
+            work sessions. Imagine you need to let your coworker know you got
+            the update, fast, but you're working on a hard problem you need to
+            keep your attention on. A response you think is neutral to your
+            coworker can easily sound snappy.<br />
+            Maybe your a rally coordinator and you're genuinely excited about
+            this new rally, but being out all day has drained you emotionally
+            and everything sounds flat and unappreciative.<br />
+            For Twitter specifically: we see a lot of us trying to make
+            professional personas on there, and build friendly connections. So
+            we thought of such a predictor could be used to try to craft a
+            particular score range each time and keep a consistent mood with
+            your coworkers or audience.
+          </p>
         </div>
       </section>
     </section>
