Made nicer About Page

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,12 +36,14 @@
         <div class="card people" data-target="card">
           <div class="card-header">Gustavo Isturiz</div>
           <p class="card-content">Front-end Architect</p>
-          <a class="card-footer">GIT HUB!</a>
+          <a class="card-footer" href="https://github.com/gisturiz">GIT HUB!</a>
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Vincent Nmeregini</div>
           <p class="card-content">UI Designer</p>
-          <a class="card-footer">GIT HUB!</a>
+          <a class="card-footer" href="https://github.com/iamcristos"
+            >GIT HUB!</a
+          >
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Cai Martin</div>
