added pics to about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -20,26 +20,35 @@
       <div class="aboutus">
         <div class="card people" data-target="card">
           <div class="card-header">Trista Paul</div>
+          <img class="team" src="../assets/trista.PNG" />
           <p class="card-content">Data Scientist</p>
           <a class="card-footer">GIT HUB!</a>
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Todd McKenzie</div>
+          <img class="team" src="../assets/todd.jpg" />
           <p class="card-content">Front-end Architect</p>
-          <a class="card-footer">GIT HUB!</a>
+          <a class="card-footer" href="https://github.com/toddmckenzie"
+            >GIT HUB!</a
+          >
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Jason Pham</div>
+          <img class="team" src="../assets/jason.jpeg" />
           <p class="card-content">Data Scientist</p>
-          <a class="card-footer">GIT HUB!</a>
+          <a class="card-footer" href="https://www.github.com/extrajp2014"
+            >GIT HUB!</a
+          >
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Gustavo Isturiz</div>
+          <img class="team" src="../assets/profile_pic.png" />
           <p class="card-content">Front-end Architect</p>
           <a class="card-footer" href="https://github.com/gisturiz">GIT HUB!</a>
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Vincent Nmeregini</div>
+          <img class="team" src="../assets/vincent.PNG" />
           <p class="card-content">UI Designer</p>
           <a class="card-footer" href="https://github.com/iamcristos"
             >GIT HUB!</a
@@ -47,8 +56,12 @@
         </div>
         <div class="card people" data-target="card">
           <div class="card-header">Cai Martin</div>
+          <img class="team" src="../assets/cai.PNG" />
           <p class="card-content">UI Designer</p>
-          <a class="card-footer">GIT HUB!</a>
+
+          <a class="card-footer" href="https://github.com/caiProgramming"
+            >GIT HUB!</a
+          >
         </div>
       </div>
     </section>
